fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
+*{
+    box-sizing:border-box;
+}
+
 body {
     background-color: darkgray;
+    height:100vh;
+    width:100vw;
 }
 
 input {
@@ -7,20 +13,42 @@ display: inline-block;
 }
 
 .searchbox {
+    width:100vw;
+    position:absolute;
+    top:50vh;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    height: 300px;
+    
 }
+
+.search {
+    width:10vw;
+    text-align: center;
+}
+
+.locEnter {
+    padding-left:5px;
+    background-color: white;
+}
+
+
 
 .destination {
     display: flex;
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    height: 300px;
+    position: relative;
+    top:55vh;
+
 }
 
 .destination img {
     border-radius: 50%;
-    height: 100px;
+    height: 20px;
+    width:20px;
 }
